--- a/Changes
+++ b/Changes
@@ -6,6 +6,15 @@ Home page:    <https://metacpan.org/release/Types-XSD>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=Types-XSD>
 Maintainer:   Toby Inkster <mailto:tobyink@cpan.org>
 
+0.000_03  2013-04-24
+
+ - (Addition) DateTimeStamp type constraint
+ - (Addition) DayTimeDuration type constraint
+ - (Addition) YearMonthDuration type constraint
+ - (Addition) assertions parameter
+ - (Addition) explicitTimezone parameter
+ - (Documentation) Types::XSD has some documentation now!
+
 0.000_02  2013-04-24
 
  - (Bugfix) Ensure that the regexps in test cases don't use any post-5.8
