--- a/Changes
+++ b/Changes
@@ -6,6 +6,11 @@ Home page:    <https://metacpan.org/release/Types-XSD>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=Types-XSD>
 Maintainer:   Toby Inkster <mailto:tobyink@cpan.org>
 
+0.000_04  2013-04-28
+
+ - (Packaging) Bundle a version of Type::Tiny for testing purposes (only in
+   developer previews; not for stable releases).
+
 0.000_03  2013-04-24
 
  - (Addition) DateTimeStamp type constraint
