--- a/Changes
+++ b/Changes
@@ -6,6 +6,9 @@ Home page:    <https://metacpan.org/release/Types-XSD>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=Types-XSD>
 Maintainer:   Toby Inkster <mailto:tobyink@cpan.org>
 
+0.001  2013-04-28  # First public release
+
+
 0.000_04  2013-04-28
 
  - (Packaging) Bundle a version of Type::Tiny for testing purposes (only in
