Import of TOBYINK/Types-XSD-0.002 from CPAN.
gitpan-cpan-distribution: Types-XSD
gitpan-cpan-version:      0.002
gitpan-cpan-path:         TOBYINK/Types-XSD-0.002.tar.gz
gitpan-cpan-author:       TOBYINK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -6,6 +6,10 @@ Home page:    <https://metacpan.org/release/Types-XSD>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=Types-XSD>
 Maintainer:   Toby Inkster <mailto:tobyink@cpan.org>
 
+0.002  2013-05-13
+
+ - (Packaging) Require DateTimeX::Auto 0.004.
+
 0.001  2013-04-28  # First public release
 
 
