--- a/Changes
+++ b/Changes
@@ -6,6 +6,11 @@ Home page:    <https://metacpan.org/release/Types-XSD>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=Types-XSD>
 Maintainer:   Toby Inkster <mailto:tobyink@cpan.org>
 
+0.003  2013-07-08
+
+ - (Packaging) Split out easy types into Types::XSD::Lite, which this
+   module now depends on.
+
 0.002  2013-05-13
 
  - (Packaging) Require DateTimeX::Auto 0.004.
