--- a/Changes
+++ b/Changes
@@ -4,41 +4,53 @@ Types-XSD
 Created:      2013-04-15
 Home page:    <https://metacpan.org/release/Types-XSD>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=Types-XSD>
-Maintainer:   Toby Inkster <mailto:tobyink@cpan.org>
+Maintainer:   Toby Inkster (TOBYINK) <tobyink@cpan.org>
 
-0.003  2013-07-08
+0.004	2014-04-12
 
- - (Packaging) Split out easy types into Types::XSD::Lite, which this
-   module now depends on.
+ [ Packaging ]
+ - Depend on Types::XSD::Lite 0.004, which includes a pretty important bug
+   fix.
+ - use Dist::Inkt.
 
-0.002  2013-05-13
+0.003	2013-07-08
 
- - (Packaging) Require DateTimeX::Auto 0.004.
+ [ Packaging ]
+ - Split out easy types into Types::XSD::Lite, which this module now
+   depends on.
 
-0.001  2013-04-28  # First public release
+0.002	2013-05-13
 
+ [ Packaging ]
+ - Require DateTimeX::Auto 0.004.
 
-0.000_04  2013-04-28
+0.001	2013-04-28	First public release
 
- - (Packaging) Bundle a version of Type::Tiny for testing purposes (only in
-   developer previews; not for stable releases).
+0.000_04	2013-04-28
 
-0.000_03  2013-04-24
+ [ Packaging ]
+ - Bundle a version of Type::Tiny for testing purposes (only in developer
+   previews; not for stable releases).
 
- - (Addition) DateTimeStamp type constraint
- - (Addition) DayTimeDuration type constraint
- - (Addition) YearMonthDuration type constraint
- - (Addition) assertions parameter
- - (Addition) explicitTimezone parameter
- - (Documentation) Types::XSD has some documentation now!
+0.000_03	2013-04-24
 
-0.000_02  2013-04-24
+ [ Documentation ]
+ - Types::XSD has some documentation now!
 
- - (Bugfix) Ensure that the regexps in test cases don't use any post-5.8
-   features.
- - (Packaging) Depend on a newer version of Type::Library. (We need the
-   undocumented _mksub method!)
+ [ Other ]
+ - Added: DateTimeStamp type constraint
+ - Added: DayTimeDuration type constraint
+ - Added: YearMonthDuration type constraint
+ - Added: assertions parameter
+ - Added: explicitTimezone parameter
 
-0.000_01  2013-04-23  # Preview release
+0.000_02	2013-04-24
 
+ [ Bug Fixes ]
+ - Ensure that the regexps in test cases don't use any post-5.8 features.
 
+ [ Packaging ]
+ - Depend on a newer version of Type::Library. (We need the undocumented
+   _mksub method!)
+
+0.000_01	2013-04-23	Preview release
