--- a/Changes
+++ b/Changes
@@ -6,6 +6,14 @@ Home page:    <https://metacpan.org/release/Types-XSD>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=Types-XSD>
 Maintainer:   Toby Inkster (TOBYINK) <tobyink@cpan.org>
 
+0.005	2014-09-11
+
+ [ Bug Fixes ]
+ - Add support for negative durations.
+   Fixes RT#89005.
+   mprentice++
+   <https://rt.cpan.org/Ticket/Display.html?id=89005>
+
 0.004	2014-04-12
 
  [ Packaging ]
